# crystalcog

./: .gitignore  AGENT-ZERO-GENESIS.md  AGENT-ZERO-INTEGRATION.md  API_DOCUMENTATION.md  CMakeLists.txt  COGNITIVE_KERNEL_DOCUMENTATION.md  CONVERSION_EXAMPLES.md  DEVELOPMENT-ROADMAP.md  Makefile  PERSISTENCE_API_DOCUMENTATION.md  README.md  README_COMPLETE.md  atomspace_lib  cogutil_lib  coverage-report.txt  crystalcog  debug_atomspace.cr  guix.scm  opencog_lib  package.json  pattern_miner  python_cognitive_kernel.py  shard.yml  test_ai_cpp_simple  test_ai_cpp_simple.cpp  test_basic.cr  test_cogserver_api.cr  test_cogserver_integration.sh  test_enhanced_pattern_matching.cr  test_integration.sh  test_nlp_structure.sh  validate_integration_test.sh
.github/workflows/: README.md  build.yml  ci.yml  crystal-build.yml  crystal-comprehensive-ci.yml  main.yml  monorepo-build.yml  ocall.yml  roadmap-issues.yml  wonka.yml
agi-bio/: CMakeLists.txt
asmoses/: CMakeLists.txt
atomspace/: CMakeLists.txt
atomspace-agents/: CMakeLists.txt
atomspace-bridge/: CMakeLists.txt
atomspace-cog/: CMakeLists.txt
atomspace-dht/: CMakeLists.txt
atomspace-explorer/: CMakeLists.txt  npm-shrinkwrap.json  package-lock.json
atomspace-ipfs/: CMakeLists.txt
atomspace-js/: CMakeLists.txt
atomspace-metta/: CMakeLists.txt
atomspace-restful/: CMakeLists.txt
atomspace-rocks/: CMakeLists.txt
atomspace-rpc/: CMakeLists.txt
atomspace-typescript/: CMakeLists.txt  package-lock.json  package.json
atomspace-websockets/: CMakeLists.txt
attention/: CMakeLists.txt
benchmark/: CMakeLists.txt
blender_api/: CMakeLists.txt
cheminformatics/: CMakeLists.txt
cognitive-cities/: README.md  SYSTEM5_CNS_MAPPING.md  __init__.py  verify_implementation.py
cognitive-cities/autonomic-triad/: README.md  __init__.py
cognitive-cities/cerebral-triad/: README.md  __init__.py
cognitive-cities/cognitive-core/: README.md  __init__.py
cognitive-cities/deployment-configs/: __init__.py
cognitive-cities/integration-hub/: __init__.py
cognitive-cities/somatic-triad/: README.md  __init__.py
cognitive-cities/tests/: __init__.py  test_triad_integration.py
cogprotolab/: CMakeLists.txt
cogserver/: CMakeLists.txt
cogutil/: CMakeLists.txt
crystal-lang/: README.md
crystal-lang/install/: install-via-apt.sh
destin/: CMakeLists.txt
dimensional-embedding/: CMakeLists.txt
distributional-value/: CMakeLists.txt
docs/: AI_INTEGRATION.md  CRYSTAL_INSTALLATION.md  IMPLEMENTATION_SUMMARY.md  OPENCOG_CORE_LIBRARIES.md  VALIDATION_SUMMARY.md
drawterm/: CMakeLists.txt  README.md
drawterm/demos/: CMakeLists.txt  demo_ai_workbench.cpp  demo_disvm_execution.cpp  demo_drawkern_complete.cpp  demo_styx_client_server.cpp  demo_yacc_parsing.cpp
drawterm/include/drawterm/: ai_models.h  disvm.h  drawterm_integration.h  styx_protocol.h  yacc_grammar.h
drawterm/src/ai/: CMakeLists.txt  ai_model.cpp  conversation_session.cpp  drawkern_ai_manager.cpp  ggml_model.cpp  integration.cpp  rwkv_model.cpp
drawterm/src/disvm/: CMakeLists.txt  disvm.cpp  disvm_manager.cpp  instruction.cpp  limbo_compiler.cpp  program.cpp
drawterm/src/integration/: drawterm_integration.cpp
drawterm/src/styx/: CMakeLists.txt  styx_auth.cpp  styx_connection.cpp  styx_message.cpp  styx_server.cpp
drawterm/src/yacc/: CMakeLists.txt  ast.cpp  code_generator.cpp  lexer.cpp  parser.cpp  template_system.cpp  validator.cpp  yacc_grammar_system.cpp
external-tools/: CMakeLists.txt
generate/: CMakeLists.txt
gnu/: CMakeLists.txt
guile-dbi/: CMakeLists.txt
language-learning/: CMakeLists.txt
learn/: CMakeLists.txt
lg-atomese/: CMakeLists.txt
link-grammar/: CMakeLists.txt
link-grammar-website/: CMakeLists.txt
linkgrammar-relex-web/: CMakeLists.txt
logicmoo_cogserver/: CMakeLists.txt
loving-ai/: CMakeLists.txt
loving-ai-ghost/: CMakeLists.txt
miner/: CMakeLists.txt
modules/: CMakeLists.txt
modules/agent-zero/: kernel.scm  meta-cognition.scm  pln-reasoning.scm
moses/: CMakeLists.txt
ocpkg/: CMakeLists.txt  opencog-installer.sh
opencog/: CMakeLists.txt
opencog-cycl/: CMakeLists.txt
opencog-debian/: CMakeLists.txt
opencog-neo4j/: CMakeLists.txt
opencog-nix/: CMakeLists.txt
opencog-to-minecraft/: CMakeLists.txt
opencog.org/: CMakeLists.txt
opencog_rpi/: CMakeLists.txt
pattern-index/: CMakeLists.txt
pi_vision/: CMakeLists.txt
pln/: CMakeLists.txt
pln-brca-xp/: CMakeLists.txt
prereq/: CMakeLists.txt
prereq/cogutil/: download_source.sh  install_prereqs.sh
python-attic/: CMakeLists.txt
python-client/: CMakeLists.txt
python-destin/: CMakeLists.txt
relex/: CMakeLists.txt
rocca/: CMakeLists.txt
ros_opencog_robot_embodiment/: CMakeLists.txt
scripts/: README.md  install-crystal.sh  test-runner.sh  validate-crystal-install.sh  validate-roadmap.js
semantic-vision/: CMakeLists.txt
sensory/: CMakeLists.txt
spacetime/: CMakeLists.txt
spec/: cpp_comparison_benchmark.cr  crystalcog_spec.cr  perf_benchmark.cr  perf_simple.cr  spec_helper.cr  test_atomspace_perf.cr
spec/ai_integration/: ai_integration_spec.cr
spec/atomspace/: atom_spec.cr  atomspace_main_spec.cr  atomspace_module_spec.cr  atomspace_spec.cr  truthvalue_spec.cr
spec/attention/: allocation_engine_spec.cr  attention_bank_spec.cr  attention_core_spec.cr  attention_main_spec.cr  attention_spec.cr  diffusion_spec.cr  rent_collector_spec.cr
spec/cogserver/: cogserver_main_spec.cr  cogserver_spec.cr
spec/cogutil/: cogutil_spec.cr  config_spec.cr  logger_spec.cr  randgen_spec.cr
spec/error_handling/: error_handling_spec.cr
spec/integration/: integration_spec.cr
spec/moses/: deme_spec.cr  metapopulation_spec.cr  moses_main_spec.cr  moses_spec.cr  (+4 more)
src/: crystalcog.cr
stochastic-language-generation/: CMakeLists.txt
test-datasets/: CMakeLists.txt
tests/: CMakeLists.txt
tools/: README.md  memory_benchmark.cr  validate_memory_profiler.cr
tv-toolbox/: CMakeLists.txt
unify/: CMakeLists.txt
unity3d-opencog-game/: CMakeLists.txt
ure/: CMakeLists.txt
vision/: CMakeLists.txt
visualization/: CMakeLists.txt
(+105 files in other folders)
